--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -4,24 +4,23 @@
     <meta name="viewport" content="width=device-width" />
     <title>milking pigeons</title>
     <!-- bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css2?family=Chicle&family=Lato&display=swap" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <!-- client css -->
     <link href="/css/client.css" rel="stylesheet">
     <!-- favicon -->
     <link rel="icon" href="/favicon.png">
 </head>
 <body>
-    
     <header>
         <div class="container">
             <object id="pigeon" data="/svg/pigeon.svg"></object>
             <span id="pigeons_h">Milking Pigeons</span>
         </div>
     </header>
-    <div class="container content">
+    <div class="container content" style="font-size:1.2em">
         <p>
             Altough the phrase is considered obsolete, in the late 18th and 19th centuries, milking pigeons was commonly known as attemping the impossible. As a matter of fact, both male and female pigeons (regarded as the most intelligent of all birds) do produce crop milk for the nourishment of their squabs. In other words, it is NOT impossible.
         </p>
@@ -29,13 +28,10 @@
             Are you ready to attempt the pigeon milking challenge?
             <hr />
             <div>
-                <a href="select-challenge.html">Start the Challenge</a></div>
+                <a href="select-challenge.html" class="link-primary">Start the Challenge</a>
+            </div>
             <hr />
         </p>
     </div>
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- bootstrap combined -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous"></script>
 </body>
 </html>
