--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -28,7 +28,7 @@
             Are you ready to attempt the pigeon milking challenge?
             <hr />
             <div>
-                <a href="select-challenge.html" class="link-primary">Start the Challenge</a>
+                <a href="select-challenge.html" class="link-primary">Start your Challenge</a>
             </div>
             <hr />
         </p>
