--- a/wwwroot/select-challenge.html
+++ b/wwwroot/select-challenge.html
@@ -1,55 +1,56 @@
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>milking pigeons</title>
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
-    <!-- google font -->
-    <link href="https://fonts.googleapis.com/css2?family=Chicle&family=Lato&display=swap" rel="stylesheet">
-    <!-- client css -->
-    <link href="/css/client.css" rel="stylesheet">
-    <!-- favicon -->
-    <link rel="icon" href="/favicon.png">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width" />
+  <title>milking pigeons</title>
+  <!-- bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+  <!-- google font -->
+  <link href="https://fonts.googleapis.com/css2?family=Chicle&family=Lato&display=swap" rel="stylesheet">
+  <!-- client css -->
+  <link href="/css/client.css" rel="stylesheet">
+  <!-- favicon -->
+  <link rel="icon" href="/favicon.png">
 </head>
 <body>
-    
-    <header>
-        <div class="container">
-            <object id="pigeon" data="/svg/pigeon.svg"></object>
-            <span id="pigeons_h">Select Challenge</span>
+  <header>
+      <div class="container">
+          <object id="pigeon" data="/svg/pigeon.svg"></object>
+          <span id="pigeons_h">Select Challenge</span>
+      </div>
+  </header>
+  <div class="container content">
+      <p style="font-size:1.6em"><strong>Select a category</strong></p>
+      <div class="list-group" id="category">
+          <!-- <button type="button" class="list-group-item list-group-item-action">History</button>
+          <button type="button" class="list-group-item list-group-item-action">Sports</button> -->
+      </div>
+      <div class="invisible">
+        <p style="font-size:1.6em"><strong>Select your challenge</strong></p>
+        <div class="list-group" id="challenge">
+            <!-- <button type="button" class="list-group-item list-group-item-action" data-id="2">US Government</button> -->
         </div>
-    </header>
-    <div class="container content">
-        <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  History
-                </button>
-              </h2>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    <a href="#" class="link-primary">US Government</a>
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Sports
-                </button>
-              </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    <a href="#" class="link-primary">Baseball Trivia</a>
-                    <hr />
-                    <a href="#" class="link-primary">Football Statistics</a>
-                </div>
-              </div>
-            </div>
-          </div>
-    </div>
+      </div>
+  </div>
+  <script>
+    window.onload=()=>{
+      getCategories();
+    }
+    async function getCategories() {
+      // populate list of categories
+      let html = '';
+      try {
+        let res = await fetch('/api/category', {method: 'GET'});
+        let data = await res.json();
+        data.forEach(c => {
+          html += '<button type="button" class="list-group-item list-group-item-action" data-id="' + c.id + '">' + c.name + '</button>'
+        });
+        document.getElementById('category').innerHTML = html;
+      } catch (error) {
+        console.log(error);
+      }
+    }
+  </script>
 </body>
 </html>
