--- a/wwwroot/challenges.html
+++ b/wwwroot/challenges.html
@@ -17,7 +17,7 @@
   <header>
       <div class="container">
           <object id="pigeon" data="/svg/pigeon.svg"></object>
-          <span id="pigeons_h">Select Challenge</span>
+          <span id="pigeons_h">Milking Pigeons - Select Challenge</span>
       </div>
   </header>
   <div class="container content">
