--- a/wwwroot/teams.html
+++ b/wwwroot/teams.html
@@ -17,21 +17,11 @@
     <header>
         <div class="container">
             <object id="pigeon" data="/svg/pigeon.svg"></object>
-            <span id="pigeons_h">Milking Pigeons</span>
+            <span id="pigeons_h">Milking Pigeons - Setup Teams</span>
         </div>
     </header>
-    <div class="container content" style="font-size:1.2em">
-        <p>
-            Altough the phrase is considered obsolete, in the late 18th and 19th centuries, milking pigeons was commonly known as attemping the impossible. As a matter of fact, both male and female pigeons (regarded as the most intelligent of all birds) do produce crop milk for the nourishment of their squabs. In other words, it is NOT impossible.
-        </p>
-        <p>
-            Are you ready to attempt the pigeon milking challenge?
-            <hr />
-            <div>
-                <a href="challenges.html" class="link-primary">Start your Challenge</a>
-            </div>
-            <hr />
-        </p>
+    <div class="container content">
+        <p style="font-size:1.6em"><strong>Select the teams</strong></p>
     </div>
 </body>
 </html>
