--- a/wwwroot/teams.html
+++ b/wwwroot/teams.html
@@ -17,10 +17,17 @@
     <header>
         <div class="container">
             <object id="pigeon" data="/svg/pigeon.svg"></object>
-            <span id="pigeons_h">Milking Pigeons - Setup Teams</span>
+            <span id="pigeons_h">Milking Pigeons - Setup teams</span>
         </div>
     </header>
     <div class="container content">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+              <li class="breadcrumb-item active" aria-current="page"><a href="challenges.html">Select challenge</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Setup teams</li>
+            </ol>
+        </nav>
         <p style="font-size:1.6em"><strong>Select the teams</strong></p>
     </div>
 </body>
