--- a/wwwroot/teams.html
+++ b/wwwroot/teams.html
@@ -17,18 +17,19 @@
     <header>
         <div class="container">
             <object id="pigeon" data="/svg/pigeon.svg"></object>
-            <span id="pigeons_h">Milking Pigeons - Setup teams</span>
+            <span id="pigeons_h">Milking Pigeons - Teams</span>
         </div>
     </header>
     <div class="container content">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page"><a href="challenges.html">Select challenge</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Setup teams</li>
+              <li class="breadcrumb-item active"><a href="challenges.html">Challenge</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Teams</li>
             </ol>
         </nav>
-        <p style="font-size:1.6em"><strong>Select the teams</strong></p>
+        <p style="font-size:1.6em"><strong>Connect the teams</strong></p>
     </div>
+    <script src="js/teams.js"></script>
 </body>
 </html>
