--- a/wwwroot/challenges.html
+++ b/wwwroot/challenges.html
@@ -1,87 +1,46 @@
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width" />
-  <title>milking pigeons</title>
-  <!-- bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
-  <!-- google font -->
-  <link href="https://fonts.googleapis.com/css2?family=Chicle&family=Lato&display=swap" rel="stylesheet">
-  <!-- client css -->
-  <link href="/css/client.css" rel="stylesheet">
-  <!-- favicon -->
-  <link rel="icon" href="/favicon.png">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>milking pigeons</title>
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+    <!-- google font -->
+    <link href="https://fonts.googleapis.com/css2?family=Chicle&family=Lato&display=swap" rel="stylesheet">
+    <!-- client css -->
+    <link href="/css/client.css" rel="stylesheet">
+    <!-- favicon -->
+    <link rel="icon" href="/favicon.png">
 </head>
 <body>
-  <header>
-      <div class="container">
-          <object id="pigeon" data="/svg/pigeon.svg"></object>
-          <span id="pigeons_h">Milking Pigeons - Select challenge</span>
-      </div>
-  </header>
-  <div class="container content">
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Select challenge</li>
-      </ol>
-    </nav>
-    <p style="font-size:1.6em"><strong>Select a category</strong></p>
-    <div class="spinner-border text-primary" role="status" id="loading">
-      <span class="visually-hidden">Loading...</span>
+    <header>
+        <div class="container">
+            <object id="pigeon" data="/svg/pigeon.svg"></object>
+            <span id="pigeons_h">Milking Pigeons - Challenge</span>
+        </div>
+    </header>
+    <div class="container content">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Challenge</li>
+            </ol>
+          </nav>
+          <p style="font-size:1.6em"><strong>Select challenge category</strong></p>
+          <div class="spinner-border text-primary" role="status" id="loading">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+          <div class="list-group" id="category">
+            <!-- categories go here -->
+          </div>
+          <div style="display:none;" id="challengesList">
+            <p style="font-size:1.6em"><strong>Select challenge</strong></p>
+            <div class="list-group" id="challenge">
+                <!-- challenges go here -->
+            </div>
+          </div>        
     </div>
-    <div class="list-group" id="category">
-      <!-- categories go here -->
-    </div>
-    <div style="display:none;" id="challengesList">
-      <p style="font-size:1.6em"><strong>Select your challenge</strong></p>
-      <div class="list-group" id="challenge">
-          <!-- challenges go here -->
-      </div>
-    </div>
-  </div>
-  <script>
-    window.onload= async()=>{
-      const data = await getData();
-      document.getElementById('loading').style.display = 'none';
-      // populate list of categories
-      let html = '';
-      data.forEach(cat => {
-        html += '<button type="button" class="list-group-item list-group-item-action category" data-id="' + cat.id + '">' + cat.name + '</button>'
-      });
-      document.getElementById('category').innerHTML = html;
-
-      document.getElementById('category').onclick = function(event) {
-        const button = event.target.closest('button');
-        if (!button) return;
-        // remove active class from all buttons
-        document.querySelectorAll('button.category').forEach((el) => {
-          el.classList.remove('active');
-        });
-        // add active class to selected button
-        button.classList.add('active');
-        // show challenges for selected category
-        let challengeHtml = '';
-        const id = parseInt(button.dataset.id);
-        const challenges = data.filter(cat => cat.id == id)[0].challenges;
-        challenges.forEach((challenge) => {
-          challengeHtml += '<a href="teams.html?id=' + challenge.id + '" class="list-group-item list-group-item-action">' + challenge.name + '</a>';
-        });
-        document.getElementById('challengesList').style.display = 'block';
-        document.getElementById('challenge').innerHTML = challengeHtml;
-      }
-    }
-    async function getData() {
-      try {
-        let res = await fetch('api/category');
-        let data = await res.json();
-        return await data;
-      } catch (error) {
-        // TODO: cusatomize error
-        console.log(error);
-      }
-    }
-  </script>
+    <script src="js/challenges.js"></script>
 </body>
 </html>
