Refactor relative urls

--- a/wwwroot/challenges.html
+++ b/wwwroot/challenges.html
@@ -9,14 +9,14 @@
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css2?family=Chicle&family=Lato&display=swap" rel="stylesheet">
     <!-- client css -->
-    <link href="/css/client.css" rel="stylesheet">
+    <link href="css/client.css" rel="stylesheet">
     <!-- favicon -->
-    <link rel="icon" href="/favicon.png">
+    <link rel="icon" href="favicon.png">
 </head>
 <body>
     <header>
         <div class="container">
-            <object id="pigeon" data="/svg/pigeon.svg"></object>
+            <object id="pigeon" data="svg/pigeon.svg"></object>
             <span id="pigeons_h">Milking Pigeons - Challenge</span>
         </div>
     </header>
