--- a/wwwroot/teams.html
+++ b/wwwroot/teams.html
@@ -28,7 +28,12 @@
               <li class="breadcrumb-item active" aria-current="page">Teams</li>
             </ol>
         </nav>
-        <p style="font-size:1.6em"><strong>Connect the teams</strong></p>
+        <p style="font-size:1.6em"><strong>Admit teams</strong></p>
+        <ol class="list-group list-group-numbered">
+            <li class="list-group-item">Cras justo odio</li>
+            <li class="list-group-item">Cras justo odio</li>
+            <li class="list-group-item">Cras justo odio</li>
+        </ol>
     </div>
     <script src="js/teams.js"></script>
 </body>
