--- a/wwwroot/teams.html
+++ b/wwwroot/teams.html
@@ -28,12 +28,8 @@
               <li class="breadcrumb-item active" aria-current="page">Teams</li>
             </ol>
         </nav>
-        <p style="font-size:1.6em"><strong>Admit teams</strong></p>
-        <ol class="list-group list-group-numbered">
-            <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Cras justo odio</li>
-        </ol>
+        <p style="font-size:1.6em"><strong>Registration pin</strong> <span id="pin"></span></p>
+        <ol class="list-group list-group-numbered" id="teams"></ol>
     </div>
     <script src="js/teams.js"></script>
 </body>
