--- a/wwwroot/challenges.html
+++ b/wwwroot/challenges.html
@@ -41,6 +41,7 @@
             </div>
           </div>        
     </div>
+    <script src="js/client.js"></script>
     <script src="js/challenges.js"></script>
 </body>
 </html>
