--- a/wwwroot/teams.html
+++ b/wwwroot/teams.html
@@ -31,6 +31,7 @@
         <p style="font-size:1.6em"><strong>Registration pin</strong> <span id="pin"></span></p>
         <ol class="list-group list-group-numbered" id="teams"></ol>
     </div>
+    <script src="js/client.js"></script>
     <script src="js/teams.js"></script>
 </body>
 </html>
